--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+html {
+  font-size: 16px;
+}
+
+@media only screen and (max-width: 600px) {
+  html {
+    font-size: 14px;
+  }
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
